[package]
name = "ink-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lazy_static = "1.0.0"
log = "0.4.0"
petgraph = "0.5.0"
regex = "1.0.0"
rustc-demangle = "0.1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
snafu = "0.6.0"
strum = { version = "0.20.0", features = ["derive"] }
tempdir = "0.3.7"
tokio = { version = "0.2.9", features = ["macros", "time", "process", "rt-threaded"] }